# math-rollouts

./: .gitignore  BRANCH_TOKEN_REFERENCES.md  DATASET_CARD.md  DISCUSSION.md  GPU_HANDOFF.md  MIGRATION_RESULTS.md  README.md  SCORING.md  SCORING_REFERENCES.md  distill-r1_and_qwen3_migration_plan.md  pyproject.toml
notebooks/: 01 - Generate Rollouts.ipynb  01 - Generate Rollouts.md  02 - Compute Nuclei for Rollouts.md  03 - Analyze Rollout Nuclei.md  README.md  calculate_token_nuclei.md  calculate_token_nuclei_colab.md  md_convert.py
requirements/: colab-gen.txt
scripts/: build_band_table.py  build_mapping.py  build_policies.py  build_problems_math12k.py  build_problems_math500.py  build_token_nuclei.py  math500_uniform_k16.py  migrate_guided_pools.py  migrate_pools.py  migrate_unique_id_splits.py
src/math_rollouts/: __init__.py  config.py  schema.py
src/math_rollouts/adapters/: __init__.py  base.py  deepseek_distill.py  paper_base.py  qwen3_think.py  qwen_math.py  registry.py
src/math_rollouts/analysis/: __init__.py  bandtable.py  difficulty.py  nuclei_stats.py  policies.py  positional.py  token_nuclei.py
src/math_rollouts/data/: __init__.py  hf.py  ids.py  pools.py  problems.py
src/math_rollouts/generate/: __init__.py  natural.py  rollouts.py  run.py
src/math_rollouts/nucleus/: __init__.py  openers.py  recipe.py  trace.py  tree.py
tests/: test_adapters.py  test_bandtable.py  test_extend_truncated.py  test_null_token_ids.py  test_policies.py  test_schema.py  test_stdio_guard.py  test_token_nuclei.py  test_trace.py  test_tree_depth1.py
(+3 files in other folders)
